created avatars using gravatar

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,4 +3,10 @@ divya:
     last_name: "nagpal"
     profile_name: "divyanagpal"
     email: "divyar2007@gmail.com"
-    
+
+
+kapil:
+    first_name: "kapil"
+    last_name: "gwalani"
+    profile_name: "kapilgwalani"
+    email: "kapilgwalani@gmail.com"
